[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TheOptimizer"
dynamic = ["version"]
dependencies = [
    "scikit-learn",
    "numpy",
    "matplotlib",
    "pandas",
    "dill"
]
readme = "README.md"
description = "A optimization library for multi-objective optimization problems."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[project.optional-dependencies]
numba = ["numba"]
zarr = ["zarr"]

[project.urls]
"Source Code" = "https://github.com/cms-patatrack/The-Optimizer"
"Issues" = "https://github.com/cms-patatrack/The-Optimizer/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
